spices/raylib/tests/errors/image-height-mismatch.tur
;; U4 negative: an (Image w h) also carries its height in the type, so
;; image-overlay -- sharing the size variable `h` across both operands --
;; rejects a height mismatch at compile time. Same shape as the width fixture;
;; this one clashes the second index, exercising the multi-index
;; cross-parameter unification (turmeric main #476).
;;
;;   tur check tests/errors/image-height-mismatch.tur
;;   => error [TUR-E0260]: sized type mismatch: function 'image-overlay' shares
;;      size variable 'h' across parameters, but argument 1 has size 64 while
;;      argument 2 has size 32
;;
;; Lives outside the flat `tur test tests` run so it does not break CI.

(load "stdlib/sized.tur")

(defmodule image_height_mismatch_test
  (import raylib/image :refer [Image image-blank image-overlay]))

(defn tall  [] : (Image (Static 64) (Static 64)) (image-blank 64 64))
(defn short [] : (Image (Static 64) (Static 32)) (image-blank 64 32))

(defn bad-overlay [] : (Image (Static 64) (Static 64))
  (image-overlay (tall) (short)))   ;; ERROR TUR-E0260: height 64 vs 32
